[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/rhythm_hero/player/attack_1/adventurer-attack1-00.png" type="Texture" id=1]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_2/adventurer-idle-2-01.png" type="Texture" id=2]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_2/adventurer-idle-2-03.png" type="Texture" id=3]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_2/adventurer-idle-2-02.png" type="Texture" id=4]
[ext_resource path="res://Assets/rhythm_hero/player/attack_1/adventurer-attack1-01.png" type="Texture" id=5]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_2/adventurer-idle-2-00.png" type="Texture" id=6]
[ext_resource path="res://Assets/rhythm_hero/player/attack_1/adventurer-attack1-04.png" type="Texture" id=7]
[ext_resource path="res://Assets/rhythm_hero/player/attack_1/adventurer-attack1-02.png" type="Texture" id=8]
[ext_resource path="res://Assets/rhythm_hero/player/attack_1/adventurer-attack1-03.png" type="Texture" id=9]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_1/adventurer-idle-02.png" type="Texture" id=10]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_1/adventurer-idle-03.png" type="Texture" id=11]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_1/adventurer-idle-01.png" type="Texture" id=12]
[ext_resource path="res://src/rhythm_hero/scripts/player.gd" type="Script" id=13]
[ext_resource path="res://Assets/rhythm_hero/player/iddle_1/adventurer-idle-00.png" type="Texture" id=14]
[ext_resource path="res://Assets/rhythm_hero/player/objective/red_circle.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 1 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "iddle_2",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "attack_1",
"speed": 30.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "iddle_1",
"speed": 10.0
} ]

[node name="Player" type="Node2D"]
script = ExtResource( 13 )

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( -32, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="RightObjective" type="Node2D" parent="."]
position = Vector2( 56, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="red_circle" type="Sprite" parent="RightObjective"]
texture = ExtResource( 15 )

[node name="PerfectArea" type="Area2D" parent="RightObjective"]

[node name="PerfectCollision" type="CollisionShape2D" parent="RightObjective/PerfectArea"]
modulate = Color( 0.968627, 1, 0, 1 )
shape = SubResource( 2 )

[node name="GoodArea" type="Area2D" parent="RightObjective"]

[node name="GoodCollision" type="CollisionShape2D" parent="RightObjective/GoodArea"]
modulate = Color( 0.0313726, 0, 1, 1 )
shape = SubResource( 3 )

[node name="NiceArea" type="Area2D" parent="RightObjective"]

[node name="NiceCollision" type="CollisionShape2D" parent="RightObjective/NiceArea"]
modulate = Color( 0.239216, 0.705882, 0.172549, 0.439216 )
position = Vector2( -4, 0 )
shape = SubResource( 4 )

[node name="BadArea" type="Area2D" parent="RightObjective"]

[node name="BadCollision" type="CollisionShape2D" parent="RightObjective/BadArea"]
modulate = Color( 0.854902, 0.141176, 0.141176, 1 )
position = Vector2( -19, 0 )
shape = SubResource( 5 )

[node name="LeftObjective" type="Node2D" parent="."]
position = Vector2( -56, 0 )
scale = Vector2( -1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="red_circle" type="Sprite" parent="LeftObjective"]
texture = ExtResource( 15 )

[node name="PerfectArea" type="Area2D" parent="LeftObjective"]
position = Vector2( -112, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="PerfectCollision" type="CollisionShape2D" parent="LeftObjective/PerfectArea"]
modulate = Color( 0.968627, 1, 0, 1 )
position = Vector2( -112, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
shape = SubResource( 2 )

[node name="GoodArea" type="Area2D" parent="LeftObjective"]
position = Vector2( -112, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="GoodCollision" type="CollisionShape2D" parent="LeftObjective/GoodArea"]
modulate = Color( 0.0313726, 0, 1, 1 )
position = Vector2( -112, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
shape = SubResource( 3 )

[node name="NiceArea" type="Area2D" parent="LeftObjective"]
position = Vector2( -112, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="NiceCollision" type="CollisionShape2D" parent="LeftObjective/NiceArea"]
modulate = Color( 0.239216, 0.705882, 0.172549, 0.439216 )
position = Vector2( -108, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
shape = SubResource( 4 )

[node name="BadArea" type="Area2D" parent="LeftObjective"]
position = Vector2( -112, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="BadCollision" type="CollisionShape2D" parent="LeftObjective/BadArea"]
modulate = Color( 0.854902, 0.141176, 0.141176, 1 )
position = Vector2( -93, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )
shape = SubResource( 5 )

[node name="PlayerContainer" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerContainer"]
frames = SubResource( 1 )
animation = "iddle_1"
frame = 1
[connection signal="area_entered" from="RightObjective/PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_entered" from="RightObjective/GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_entered" from="RightObjective/NiceArea" to="." method="_on_NiceArea_area_entered"]
[connection signal="area_entered" from="RightObjective/BadArea" to="." method="_on_BadArea_area_entered"]
[connection signal="area_entered" from="LeftObjective/PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_entered" from="LeftObjective/GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_entered" from="LeftObjective/NiceArea" to="." method="_on_NiceArea_area_entered"]
[connection signal="area_entered" from="LeftObjective/BadArea" to="." method="_on_BadArea_area_entered"]
[connection signal="animation_finished" from="PlayerContainer/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
